Commit 7 - Added initial styling for resume site

--- a/resume_page/index.html
+++ b/resume_page/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" href="style.css">
 	<meta charset="UTF-8">
 	<title>Kat Cozadd Resume</title>
 </head>
@@ -10,29 +11,23 @@
 	<h3>Find me on <a href="https://www.linkedin.com/in/katrina-cozadd-664595156/">LinkedIn</a> , <a href="https://www.facebook.com/kat.cozadd"> Facebook</a>, or on my <a href="https://www.katcozadd.com/"> website!</a></h3>
 	<h4>Work Experience</h4>
 	<ul>
-		<li>Comida At The Source - Assistant General Manager 
-			<br />September 2016-February 2018 </li>
-				<ol>
+		<p>Comida At The Source - Assistant General Manager 
+			<br />September 2016-February 2018 </p>
 					<li>Assist the General Manager in coordinating and directing everyday fast paced and high energy business operations </li>
 					<li>Create weekly schedules, ensuring scheduled shifts run smoothly, managing daily operations </li>
 					<li>Interview and train new employees and assisting on the front and back lines when necessary</li>
-				</ol>
-		<li>Flavours Catering by Sodexo - Event Staff Lead and Assistant Catering Director 
-			<br /> April 2014-August 2016 </li>
-				<ol>
+		<p>Flavours Catering by Sodexo - Event Staff Lead and Assistant Catering Director 
+			<br /> April 2014-August 2016 </p>
 					<li>Maintain clear communication with clients: creating, reviewing and completing catering orders for clients via email, phone and catertrax software coordination 
 					ensure successful operations of catering function, including coordination, prep, set-up, execution, clean-up and customer satisfaction follow-up</li>
 					<li>Train and schedule catering staff and actively sustain company procedures and policies </li>
 					<li>Maintain communication between all departments with various needs for multiple events </li>
-				</ol>
-		<li>Mad Jacks Cafe - Barista, Grill Cook and Shift Supervisor
-			<br /> December 2013-May 2014 and December 2015-May 2016</li>
-				<ol>
+		<p>Mad Jacks Cafe - Barista, Kitchen Manager and Shift Supervisor
+			<br /> December 2013-May 2014 and December 2015-May 2016</p>
 					<li>Supervise crew of student workers</li>
 					<li>Exceptional customer service</li>
 					<li>Quick and high-quality food service </li>
 					<li>Cashier balancing</li>
-				</ol>
 	</ul>
 	
 </body>
