Commit 8 - Added project.html page and content

--- a/resume_page/index.html
+++ b/resume_page/index.html
@@ -8,7 +8,13 @@
 <body>
 	<h1>Kat Cozadd</h1>
 	<img src="images/birthday-2.jpg" alt="Photo of Kat Cozadd">
-	<h3>Find me on <a href="https://www.linkedin.com/in/katrina-cozadd-664595156/">LinkedIn</a> , <a href="https://www.facebook.com/kat.cozadd"> Facebook</a>, or on my <a href="https://www.katcozadd.com/"> website!</a></h3>
+	<nav> 
+		<a href="index.html" target="_blank">Home Page</a>
+		<a href="projects.html" target="_blank">Projects</a>
+		<a href="https://www.linkedin.com/in/katrina-cozadd-664595156/" target="_blank">LinkedIn</a>  
+		<a href="https://www.facebook.com/kat.cozadd" target="_blank"> Facebook</a> 
+		<a href="https://www.katcozadd.com/" target="_blank">Personal Website</a>
+	</nav>
 	<h4>Work Experience</h4>
 	<ul>
 		<p>Comida At The Source - Assistant General Manager 
